infrastructure/security_group.tf
resource "aws_security_group" "ec2_sg" {
  name        = "${var.project_name}-ec2-sg"
  description = "Allow inbound traffic for microservice and all outbound traffic"
  vpc_id      = aws_vpc.main.id

  ingress {
    description      = "Allow traffic to microservice port"
    from_port        = var.microservice_port
    to_port          = var.microservice_port
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }
 ingress {
    description      = "Allow traffic to microservice port"
    from_port        = var.streamlit_port
    to_port          = var.streamlit_port
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }
  ingress {
    description      = "Allow SSH access"
    
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"] # WARNING: Allows SSH from anywhere. Restrict this in production.
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1" # Allow all outbound traffic
    cidr_blocks      = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.project_name}-ec2-sg"
  }
}


resource "aws_security_group" "sg_alb_internet" {
  name        = "my-app-sg-alb-internet-2"
  description = "Permite el trafico de cualquier persona al ALB"
  vpc_id      = aws_vpc.main.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
